# Copyright (c) 2022 Mark Friedenbach
#
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at http://mozilla.org/MPL/2.0/.

[package]
name = "webserver"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
exclude = [".github", "Dockerfile", ".dockerignore", "doc", "terms"]


[[bin]]
name = "webcs"
path = "src/daemon/main.rs"

[lib]
name = "libwebcs"
path = "src/core/lib.rs"
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
syn = { version = "1.0.57", features = ["full", "fold"] }
quote = "1.0.8"
rust_decimal = "1.23"

[features]
default = ["fdb"]
fdb = []

# End of File
