# Copyright (c) 2022 Mark Friedenbach
#
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at http://mozilla.org/MPL/2.0/.

[package]
name = "webserver"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
exclude = [".github", "Dockerfile", ".dockerignore", "doc", "terms"]


[[bin]]
name = "webcashd"

[lib]
name = "webcash"

[dependencies]
actix-web = "4"
rust_decimal = "1.23"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10.2"

# End of File
