# Copyright (c) 2022 Mark Friedenbach
#
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at http://mozilla.org/MPL/2.0/.

[package]
name = "webserver"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
exclude = [".github", "Dockerfile", ".dockerignore", "doc", "terms"]


[[bin]]
name = "webcashd"

[lib]
name = "webcash"

[dependencies]
actix-web = "4"
base64 = "0.13.0"
env_logger = "0.9.0"
log = "0.4.17"
pretty_env_logger = "0.4.0"
rust_decimal = "1.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.81"
sha2 = "0.10.2"
thousands = "0.2.0"

# End of File
